# entomon

./: Cargo.toml  Makefile  README.md  build.rs  index.html
css/: style.css
js/: query.js  sort.js
src/: data.rs  main.rs  server.rs
static/: index.html
testfiles/: test.toml
