[package]
name = "entomon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
serde = { version = "1.0.188", features = ["derive"] }
openff-toolkit = { path = "../openff-toolkit" }
ligand = { path = "../ligand" }
actix-web = "4.4.0"
actix-files = "0.6.2"
